cl/SkylineParser.py
# Generated from Skyline.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SkylineParser ( Parser ):

    grammarFileName = "Skyline.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'('", "')'", "'-'", "'*'", "'+'", 
                     "','", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM", "VAR", "WS" ]

    RULE_root = 0
    RULE_expr = 1
    RULE_exprovar = 2
    RULE_creaoskyline = 3
    RULE_crea = 4
    RULE_skylineope = 5
    RULE_skyline = 6
    RULE_simple = 7
    RULE_compost = 8
    RULE_aleatori = 9

    ruleNames =  [ "root", "expr", "exprovar", "creaoskyline", "crea", "skylineope", 
                   "skyline", "simple", "compost", "aleatori" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    NUM=12
    VAR=13
    WS=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SkylineParser.ExprContext,0)


        def EOF(self):
            return self.getToken(SkylineParser.EOF, 0)

        def getRuleIndex(self):
            return SkylineParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = SkylineParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.expr()
            self.state = 21
            self.match(SkylineParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprovar(self):
            return self.getTypedRuleContext(SkylineParser.ExprovarContext,0)


        def creaoskyline(self):
            return self.getTypedRuleContext(SkylineParser.CreaoskylineContext,0)


        def getRuleIndex(self):
            return SkylineParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SkylineParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 25
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.exprovar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.creaoskyline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprovarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(SkylineParser.VAR)
            else:
                return self.getToken(SkylineParser.VAR, i)

        def creaoskyline(self):
            return self.getTypedRuleContext(SkylineParser.CreaoskylineContext,0)


        def getRuleIndex(self):
            return SkylineParser.RULE_exprovar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprovar" ):
                return visitor.visitExprovar(self)
            else:
                return visitor.visitChildren(self)




    def exprovar(self):

        localctx = SkylineParser.ExprovarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exprovar)
        try:
            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.match(SkylineParser.VAR)
                self.state = 28
                self.match(SkylineParser.T__0)
                self.state = 29
                self.match(SkylineParser.VAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.match(SkylineParser.VAR)
                self.state = 31
                self.match(SkylineParser.T__0)
                self.state = 32
                self.creaoskyline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CreaoskylineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def crea(self):
            return self.getTypedRuleContext(SkylineParser.CreaContext,0)


        def skylineope(self):
            return self.getTypedRuleContext(SkylineParser.SkylineopeContext,0)


        def getRuleIndex(self):
            return SkylineParser.RULE_creaoskyline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreaoskyline" ):
                return visitor.visitCreaoskyline(self)
            else:
                return visitor.visitChildren(self)




    def creaoskyline(self):

        localctx = SkylineParser.CreaoskylineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_creaoskyline)
        try:
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.crea()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.skylineope(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CreaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple(self):
            return self.getTypedRuleContext(SkylineParser.SimpleContext,0)


        def compost(self):
            return self.getTypedRuleContext(SkylineParser.CompostContext,0)


        def aleatori(self):
            return self.getTypedRuleContext(SkylineParser.AleatoriContext,0)


        def getRuleIndex(self):
            return SkylineParser.RULE_crea

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCrea" ):
                return visitor.visitCrea(self)
            else:
                return visitor.visitChildren(self)




    def crea(self):

        localctx = SkylineParser.CreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_crea)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SkylineParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.simple()
                pass
            elif token in [SkylineParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.compost()
                pass
            elif token in [SkylineParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.aleatori()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SkylineopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def skylineope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SkylineParser.SkylineopeContext)
            else:
                return self.getTypedRuleContext(SkylineParser.SkylineopeContext,i)


        def skyline(self):
            return self.getTypedRuleContext(SkylineParser.SkylineContext,0)


        def NUM(self):
            return self.getToken(SkylineParser.NUM, 0)

        def getRuleIndex(self):
            return SkylineParser.RULE_skylineope

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkylineope" ):
                return visitor.visitSkylineope(self)
            else:
                return visitor.visitChildren(self)



    def skylineope(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SkylineParser.SkylineopeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_skylineope, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 45
                self.match(SkylineParser.T__1)
                self.state = 46
                self.skylineope(0)
                self.state = 47
                self.match(SkylineParser.T__2)
                pass

            elif la_ == 2:
                self.state = 49
                self.match(SkylineParser.T__3)
                self.state = 50
                self.skylineope(7)
                pass

            elif la_ == 3:
                self.state = 51
                self.skyline()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 69
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = SkylineParser.SkylineopeContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_skylineope)
                        self.state = 54
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 55
                        self.match(SkylineParser.T__4)
                        self.state = 56
                        self.skylineope(7)
                        pass

                    elif la_ == 2:
                        localctx = SkylineParser.SkylineopeContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_skylineope)
                        self.state = 57
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 58
                        self.match(SkylineParser.T__5)
                        self.state = 59
                        self.skylineope(5)
                        pass

                    elif la_ == 3:
                        localctx = SkylineParser.SkylineopeContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_skylineope)
                        self.state = 60
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 61
                        self.match(SkylineParser.T__4)
                        self.state = 62
                        self.match(SkylineParser.NUM)
                        pass

                    elif la_ == 4:
                        localctx = SkylineParser.SkylineopeContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_skylineope)
                        self.state = 63
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 64
                        self.match(SkylineParser.T__5)
                        self.state = 65
                        self.match(SkylineParser.NUM)
                        pass

                    elif la_ == 5:
                        localctx = SkylineParser.SkylineopeContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_skylineope)
                        self.state = 66
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 67
                        self.match(SkylineParser.T__3)
                        self.state = 68
                        self.match(SkylineParser.NUM)
                        pass

             
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class SkylineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SkylineParser.VAR, 0)

        def crea(self):
            return self.getTypedRuleContext(SkylineParser.CreaContext,0)


        def getRuleIndex(self):
            return SkylineParser.RULE_skyline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkyline" ):
                return visitor.visitSkyline(self)
            else:
                return visitor.visitChildren(self)




    def skyline(self):

        localctx = SkylineParser.SkylineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_skyline)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SkylineParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(SkylineParser.VAR)
                pass
            elif token in [SkylineParser.T__1, SkylineParser.T__7, SkylineParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.crea()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(SkylineParser.NUM)
            else:
                return self.getToken(SkylineParser.NUM, i)

        def getRuleIndex(self):
            return SkylineParser.RULE_simple

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple" ):
                return visitor.visitSimple(self)
            else:
                return visitor.visitChildren(self)




    def simple(self):

        localctx = SkylineParser.SimpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simple)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SkylineParser.T__1)
            self.state = 79
            self.match(SkylineParser.NUM)
            self.state = 80
            self.match(SkylineParser.T__6)
            self.state = 81
            self.match(SkylineParser.NUM)
            self.state = 82
            self.match(SkylineParser.T__6)
            self.state = 83
            self.match(SkylineParser.NUM)
            self.state = 84
            self.match(SkylineParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompostContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SkylineParser.SimpleContext)
            else:
                return self.getTypedRuleContext(SkylineParser.SimpleContext,i)


        def getRuleIndex(self):
            return SkylineParser.RULE_compost

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompost" ):
                return visitor.visitCompost(self)
            else:
                return visitor.visitChildren(self)




    def compost(self):

        localctx = SkylineParser.CompostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compost)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(SkylineParser.T__7)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.simple()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SkylineParser.T__1):
                    break

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SkylineParser.T__6:
                self.state = 92
                self.match(SkylineParser.T__6)
                self.state = 93
                self.simple()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(SkylineParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AleatoriContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(SkylineParser.NUM)
            else:
                return self.getToken(SkylineParser.NUM, i)

        def getRuleIndex(self):
            return SkylineParser.RULE_aleatori

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAleatori" ):
                return visitor.visitAleatori(self)
            else:
                return visitor.visitChildren(self)




    def aleatori(self):

        localctx = SkylineParser.AleatoriContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_aleatori)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(SkylineParser.T__9)
            self.state = 102
            self.match(SkylineParser.NUM)
            self.state = 103
            self.match(SkylineParser.T__6)
            self.state = 104
            self.match(SkylineParser.NUM)
            self.state = 105
            self.match(SkylineParser.T__6)
            self.state = 106
            self.match(SkylineParser.NUM)
            self.state = 107
            self.match(SkylineParser.T__6)
            self.state = 108
            self.match(SkylineParser.NUM)
            self.state = 109
            self.match(SkylineParser.T__6)
            self.state = 110
            self.match(SkylineParser.NUM)
            self.state = 111
            self.match(SkylineParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.skylineope_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def skylineope_sempred(self, localctx:SkylineopeContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 2)
         




